--- a/Sispec.Infra/Sispec.Infra.csproj
+++ b/Sispec.Infra/Sispec.Infra.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sispec.Domain\Sispec.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
