Feita a logica da service e da controller pessoa

--- a/Sispec.Application/Sispec.Application.csproj
+++ b/Sispec.Application/Sispec.Application.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sispec.Domain\Sispec.Domain.csproj" />
+    <ProjectReference Include="..\Sispec.Service\Sispec.Service.csproj" />
+  </ItemGroup>
+
 </Project>
