--- a/Sispec.Infra/Sispec.Infra.csproj
+++ b/Sispec.Infra/Sispec.Infra.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200121025438_Evolution 01.cs" />
+    <Compile Remove="Migrations\20200121025438_Evolution 01.Designer.cs" />
+    <Compile Remove="Migrations\20200121034203_Evolution_03.cs" />
+    <Compile Remove="Migrations\20200121034203_Evolution_03.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Repository\" />
   </ItemGroup>
 
