--- a/Sispec.Application/Properties/launchSettings.json
+++ b/Sispec.Application/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:60259",
+      "applicationUrl": "http://localhost:60259"
       "sslPort": 44324
     }
   },
