--- a/Sispec.Infra/Sispec.Infra.csproj
+++ b/Sispec.Infra/Sispec.Infra.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200204101935_Evolution_02.cs" />
+    <Compile Remove="Migrations\20200204101935_Evolution_02.Designer.cs" />
+    <Compile Remove="Migrations\20200204102059_Evolution_02.cs" />
+    <Compile Remove="Migrations\20200204102059_Evolution_02.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Repository\" />
   </ItemGroup>
 
