--- a/Sispec.Application/Sispec.Application.csproj
+++ b/Sispec.Application/Sispec.Application.csproj
@@ -19,4 +19,6 @@
     <ProjectReference Include="..\Sispec.Service\Sispec.Service.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties clientapp_4package_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
